--- a/src/App.css
+++ b/src/App.css
@@ -11,3 +11,12 @@
   display: flex;
   justify-content: flex-end;
 }
+
+.particles {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: -1;
+}
